tests/NormalTests/paczka2/big_fuzzy/56965096.err
Error in line 6: 48BIDv A667 62,3
Error in line 14: A571 A39 92,5
Error in line 29: qcJ!7stN A2!1 75,2
Error in line 27: qcJ87stN A571 92,3
Error in line 41: A571 A281 97,1
Error in line 33: ecRIcJMj A281 86,2
Error in line 42: 48BIDv A281 4,1
Error in line 31: qcJ87stN A281 227,1
Error in line 46: 48BIDv A667 25,8
Error in line 57: 5LG A571 46,6
Error in line 68: ecRIcJMj A281 88,6
Error in line 59: zibMoe A571 42,0
Error in line 88: 48BIDv A39 19,6
Error in line 101: 5LG A39 70,9
Error in line 109: k7AhRFkn A571 18,4
Error in line 107: ecRIcJMj A281 75,0
Error in line 112: ecRIcJMj A39 80,6
Error in line 130: k7AhRFkn A281 -2,0
Error in line 131: ecRIcJMj A571 20,2
Error in line 137: A571 A667 66,8
Error in line 148: A571 A571 50,6
Error in line 157: 5LG A281 44,13
Error in line 149: A571 A39 32,7
Error in line 164: ecRIcJMj A39 26,0
Error in line 163: k7AhRFkn A281 2,6
Error in line 169: 48BIDv A39 47,7
Error in line 167: ecRIcJMj A281 95,5
Error in line 155: qcJ87stN A667 415,3
Error in line 188: A571 A667 48,1
Error in line 165: zibMoe A571 150,7
Error in line 194: ecRIcJMj A571 K3,0
Error in line 201: qcJ87stN A281 72,4
Error in line 195: ecRIcJMj A571 231,6
Error in line 221: ecRIcJMj A281 52,1
Error in line 224: zibMoe A667 67,8
Error in line 223: ecRIcJMj A571 2,0
Error in line 231: 48BIDv A667 86,2
Error in line 235: ecRIcJMj $39 398,4
Error in line 236: A571 A667 43,3
Error in line 239: zibMoe A667 24,7
Error in line 238: A571 A571 58,4
Error in line 232: ecRIcJMj A39 99,6
